--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
-[web_server]
-host = 0.0.0.0
-port = 5000
+# 服务器配置
+;[web_server]
+;host = 0.0.0.0
+;port = 5000
 
+# Mongo数据库配置
 [mongo]
 host = 127.0.0.1
 port = 27017
