注释中添加了sqlite3和mysql配置相关内容

--- a/config.ini
+++ b/config.ini
@@ -7,3 +7,14 @@
 [mongo]
 host = 127.0.0.1
 port = 27017
+
+;# sqlite3数据库配置
+;[sqlite3]
+;db_path = ./web.db
+;
+;# mysql数据库配置
+;[mysql]
+;host = 127.0.0.1
+;port = 3306
+;username = root
+;password = password
