添加了MYSQL连接器和通用操作器

--- a/config.ini
+++ b/config.ini
@@ -13,9 +13,9 @@ database = ''
 ;[sqlite3]
 ;db_path = ./web.db
 ;
-;# mysql数据库配置
-;[mysql]
-;host = 127.0.0.1
-;port = 3306
-;username = root
-;password = password
+# mysql数据库配置
+[mysql]
+host = 127.0.0.1
+port = 3306
+username = root
+password = password
