--- a/config.ini
+++ b/config.ini
@@ -3,12 +3,6 @@
 host = 0.0.0.0
 port = 5000
 
-# Mongo数据库配置
-[mongo]
-host = 127.0.0.1
-port = 27017
-database = ''
-
 ;# sqlite3数据库配置
 ;[sqlite3]
 ;db_path = ./web.db
@@ -19,3 +13,14 @@ host = 127.0.0.1
 port = 3306
 username = root
 password = password
+database = database
+
+# Mongo数据库配置
+[mongo]
+host = 127.0.0.1
+port = 27017
+database = ''
+
+[redis]
+host = 127.0.0.1
+port = 27017
